--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 
 <div data-role="page" id="categories1"
 <div data-role="content">
-    <h1><img alt="Print Image"  src="Images/banner_sm.png" width="320" height="75"/></h1>
     <div data-role="header" data-position="fixed">
     </div>
     <div data-role="content">
@@ -64,9 +63,7 @@
         <div data-role="navbar">
             <ul>
                 <li><a href="#index" data-transition="pop" data-icon="home">Home</a></li>
-                <li><a href="https://github.com/jamesdjackson/MiU/tree/gh-pages" data-transition="fade" data-icon="grid">Github</a></li>
-                <li><a href="#enter" data-transition="slideup" data-icon="plus">Add Print</a></li>
-                <li><a href="about.html" data-transition="slideup" data-icon="info">About</a></li>
+                <li><a href="http://jamesdjackson.github.io/AVF-1310-Project-1" data-transition="fade" data-icon="grid">Github</a></li>
             </ul>
         </div>
     </div>
