--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div data-role="navbar">
             <ul>
                 <li><a href="#index" data-transition="pop" data-icon="home">Home</a></li>
-                <li><a href="https://github.com/jamesdjackson/MiU/tree/gh-pages" data-transition="fade" data-icon="grid">Github</a></li>
+                <li><a href="https://github.com/jamesdjackson/AVF-1310-Project-1/gh-pages/index.html" data-transition="fade" data-icon="grid">Github</a></li>
             </ul>
         </div>
     </div>
