--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -17,7 +17,7 @@
     </head>
     <body>
         <div class="app">
-            <div data-role="page" id="categories1"
+            <div data-role="page" id="categories1">
             <div data-role="content">
                 <div data-role="header" data-position="fixed">
                 </div>
