--- a/Location.html
+++ b/Location.html
@@ -1,33 +1,35 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Device Properties Example</title>
 
+<!--James Jackson-->
+<!--AVF 1310-->
+<!--Project 1-->
+
+<html xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
+<head>
+    <meta charset="utf-8">
+    <title>API Mashup Demo</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1,  minimum-scale=1, maximum-scale=1">
+    <link rel="stylesheet" href="css/app.min.css">
+    <script src="js/jQuery2.0.2.min.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
+    <script src="js/main.min.js"></script>
     <script type="text/javascript" charset="utf-8" src="phonegap.js"></script>
     <script type="text/javascript" charset="utf-8">
 
    document.addEventListener("deviceready", onDeviceReady, false);
 
     var watchID = null;
-
-
     function onDeviceReady() {
-        // Update every 3 seconds
         var options = { frequency: 3000 };
         watchID = navigator.geolocation.watchPosition(onSuccess, onError, options);
     }
-
-    // onSuccess Geolocation
-    //
     function onSuccess(position) {
         var element = document.getElementById('geolocation');
         element.innerHTML ='Latitude: ' + position.coords.latitude + '<br />' +
                        'Longitude: ' + position.coords.longitude + '<br />' +
                        '<hr />'      + element.innerHTML;
     }
-
-    // onError Callback receives a PositionError object
-    //
     function onError(error) {
         alert('code: '    + error.code    + '\n' +
               'message: ' + error.message + '\n');
@@ -35,6 +37,29 @@
 
     </script>
   </head>
+  <body>
+
+<div class="app-wrapper">
+
+    <nav class="main-menu">
+        <a href="Accelerometer.html">Accelerometer</a>
+        <a href="Compass.html">Compass</a>
+        <a href="flickr.html">Flickr</a>
+        <a href="Instagram.html">Instagram</a>
+        <a href="Location.html">Location</a>
+        <a href="Map.html">Map</a>
+        <a href="Notifications.html">Notifications</a>
+         <a href="template.html">Camera</a>
+         <a href="Youtube.html">Connections</a>
+     
+    </nav>
+
+    <header>
+        <div class="main-menu-button main-menu-button-left"><a class="menu">&nbsp;</a></div>
+        <h1>API Mashup</h1>
+    </header>
+
+    <div class="app-content">
   <body>
     <p id="geolocation">Watching geolocation...</p>
   </body>
